--- a/Proyecto Pizzeria/rutas/cliente/templates/Cliente.html
+++ b/Proyecto Pizzeria/rutas/cliente/templates/Cliente.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clientes - Pizzería</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('appcliente.static', filename='styles.css') }}">
 </head>
 <body>
     <header>
