--- a/Proyecto Pizzeria/rutas/cliente/static_cliente/styles.css
+++ b/Proyecto Pizzeria/rutas/cliente/static_cliente/styles.css
@@ -1,16 +1,21 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    background-image: url("./fondoInicio.jpg");
+  font-family: Arial, sans-serif;
+  background-color: f4f4f4;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Esto asegura que el cuerpo se extienda al menos al 100% de la altura de la ventana */
+  background-image: url("./fondoInicio.jpg");
 }
 
 header {
     background-color: #333;
     color: #fff;
-    padding: 1em;
+    padding: 10px;
+    position: relative;
+    z-index: 1;
 }
 
 h1 {
@@ -18,7 +23,9 @@ h1 {
 }
 
 section {
-    padding: 2em;
+  padding: 2em;
+  justify-content: space-between;
+  flex-grow: 1; /* Esto permite que la secciÃ³n se expanda y ocupe todo el espacio disponible */
 }
 
 form {
@@ -37,10 +44,6 @@ input {
     box-sizing: border-box;
 }
 
-#btnCancelar{
-  background-color: #E82D2D;
-}
-
 button {
     background-color: #333;
     color: #fff;
@@ -50,41 +53,202 @@ button {
     cursor: pointer;
 }
 
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 1em;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-#mensaje_error{
-    font-size: 10px;
-}
-
-#contenedor_inicio{
-    background-color: rgba(255, 255, 255, 0.9); /* Color de fondo con transparencia */
-    border-radius: 10px; /* Bordes redondeados */
-    padding: 20px;
-    max-width: 600px; /* Ancho máximo del contenedor */
-    margin: 0 auto; /* Centra el contenedor horizontalmente */
-}
-
-#mensaje_cuenta_creada{
-    height: 50px;
-
-}
-
-#icono_palomita{
-    width: 30px;
-    height: 30px;
-}
-
-#div_mensaje_correcto{
+.tab-content {
     display: none;
-    width: 300px;
-    height:  30px;
-    margin: 0 auto;
-    
+  }
+  
+  .tab:target .tab-content, .tab:last-of-type .tab-content {
+    display: block;
+  }
+  
+  .tab:target ~ .tab:last-of-type .tab-content {
+    display: none;
+  }
+
+  :root {
+    --tabs-border-color: #ABCDEF;
+    --tabs-border-size: 3px;
+    --tabs-text-color: white;
+    --tabs-dark-color: #012345;
+    --tabs-lite-color: #345678;
+    --tabs-width: 120px;
+    --tabs-height: 40px;
+  }
+
+  body {
+    font-family: sans-serif;
+    line-height: 1.2;
+  }
+  h2, p {
+    margin: 0;
+  } 
+  #tabla {
+    color: inherit;
+    text-decoration: none;
+  }
+  .tabs * {
+    box-sizing: border-box;
+  }
+
+  .tab-container {
+    position: relative;
+    padding-top: var(--tabs-height);
+  } 
+  #tab1>a { --tabs-position: 0; }
+  #tab2>a { --tabs-position: 1; }
+  #tab3>a { --tabs-position: 2; }
+  #tab4>a { --tabs-position: 3; }
+  #tab5>a { --tabs-position: 4; }
+  #tab6>a { --tabs-position: 5; }
+  #tab7>a { --tabs-position: 6; }
+  #tab8>a { --tabs-position: 7; }
+  #tab9>a { --tabs-position: 8; }
+  .tab>a {
+    text-align: center;
+    position: absolute;
+    width: calc(var(--tabs-width));
+    height: calc(var(--tabs-height) + var(--tabs-border-size)); 
+    top: 0;
+    left: calc(var(--tabs-width) * var(--tabs-position));
+  }
+
+  .tabs { 
+    padding: 10px;
+    color: var(--tabs-text-color);
+  }
+  .tab-content {
+    background-color: var(--tabs-lite-color); 
+    padding: 20px;
+    border: var(--tabs-border-size) solid var(--tabs-border-color);
+    border-radius: 0 0 10px 10px;
+    position: relative;
+    z-index: 100;
+  }
+  .tab>a {
+    background-color: var(--tabs-dark-color); 
+    padding: 10px;
+    border: var(--tabs-border-size) solid var(--tabs-border-color);
+    border-radius: 10px 10px 0 0;
+    border-bottom: 0;
+  }
+  .tab:target>a, .tab:last-of-type>a {
+    background-color: var(--tabs-lite-color); 
+    z-index: 200;
+  }
+  .tab:target ~ .tab:last-of-type>a {
+    background-color: var(--tabs-dark-color); 
+    z-index: 0; 
+  }
+
+  /* Estilos para la tabla */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  color: black;
 }
+
+th, td {
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+/* Estilo para las celdas del encabezado */
+th {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+}
+
+/* Estilo para las filas impares */
+tr:nth-child(odd) {
+  background-color: lightblue;
+}
+tr:nth-child(even) {
+  background-color: lightskyblue;
+}
+
+.container {
+  position: absolute;
+  margin-top: 50px; /* Ajusta según el tamaño de tu encabezado (header) */
+  margin-bottom: 50px; /* Ajusta según el tamaño de tu pie de página (footer) */
+  min-height: 66.4vh;
+  left: 3%;
+  top: 10%;
+  width: 60%;
+  background-color: #333;
+  padding: 10px;
+  border: 2px solid rgb(255, 175, 28);
+  border-radius: 10px;
+}
+
+.groupbox {
+  border: 2px solid orange;
+  padding: 10px;
+  position: absolute;
+  z-index: 0;
+  background-color: white;
+}
+
+#groupbox1 {
+  top: 10px;
+  left: 10px;
+}
+
+#groupbox2 {
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#groupbox3 {
+  top: 10px;
+  right: 10px;
+}
+
+#groupbox4 {
+  bottom: 10px;
+  left: 10px;
+}
+
+#groupbox5{
+  bottom:  10px;
+  right: 10px;
+  margin-bottom:  50px;
+  background-color: #4f4f4f;
+}
+
+#lbl_precio{
+  font-size: 30px;
+  font-weight: bold;
+  padding-bottom: 5px;
+  color: white;
+}
+
+#carrito{
+  position: absolute;
+  width: 450px;
+  height: 500px;
+  right: 0px;
+  top: 13%;
+  overflow-y: auto;
+  padding-right: 4px;
+}
+
+.texto-celda{
+  font-size: 13px;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 1em;   
+  position: absolute;
+  z-index: 1;
+  bottom: 0px;
+  width: 100%;
+}
+
+
+
