--- a/Proyecto Pizzeria/rutas/cliente/static_cliente/styles.css
+++ b/Proyecto Pizzeria/rutas/cliente/static_cliente/styles.css
@@ -240,6 +240,11 @@ tr:nth-child(even) {
   font-size: 13px;
 }
 
+.imagenes{
+  width: 40px;
+  height: 40px;
+}
+
 footer {
   background-color: #333;
   color: #fff;
