--- a/Proyecto Pizzeria/rutas/administrador/static_admin/styles.css
+++ b/Proyecto Pizzeria/rutas/administrador/static_admin/styles.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh; /* Esto asegura que el cuerpo se extienda al menos al 100% de la altura de la ventana */
+  background-color: rgb(22, 22, 22);
 }
 
 header {
@@ -221,9 +222,26 @@ tr:nth-child(even) {
 }
 
 #btn_agregar{
-  position: absolute;
+  position: fixed;
   top: 11%;
   right: 8%;
+}
+
+#btn_salir{
+  position: fixed;
+  bottom: 9%;
+  right: 8%;
+}
+
+#imagenRegistro{
+  width: 100px;
+  height: 100px;
+}
+
+#btn_excel{
+  position: fixed;
+  bottom: 15%;
+  right: 6%;
 }
 
 footer {
